@@ -1,3 +1,8 @@
+2007-03-15  Ross Burton  <ross@burtonini.com>
+
+	* src/eds-bookview.c:
+	Add custom queries support.
+
 2007-03-14  Ross Burton  <ross@burtonini.com>
 
 	* *:
